--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="https://www.facebook.com/pkpmgd" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/K78M" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.linkedin.com/in/kmarindagoda/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
